Change div comment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>project_infinity_0.0.1</title>
     </head>
     <body>
-        <div>Hello World!!</div>
+        <div>Hello</div>
     </body>
 </html>
